--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/auth/signin" class="form form-container">
+<form method="post" action="/auth/signin" class="form form-container margin-top-big">
     <h2 class="form-title">Welcome back! <br> <span class="beGreen">signin </span>  and pick up where you left off</h2>
     {{> flashMessage}}
 
