--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/auth/signup" class="form form-container">
+<form method="post" action="/auth/signup" class="form form-container margin-top-big">
     <h2 class="form-title">Hi there ! <br> <span class="beGreen">Sign up</span> and get acces to <span class="beGreen">more features</span></h2>
     {{> flashMessage}}
 
