--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,9 +6,11 @@
 
   <section class="home bg">
         <span class="title-txt">
+            <div class="w-100 d-flex flex-column align-items-center justify-content-center">
             <h1 class="title">Looking for a high end restaurant near your location ?</h1>
-            <h3 class="home-p">Ask <span class="job-title"><strong>Rest'OU</strong></span> 
+              <h3 class="home-p">Ask <span class="job-title"><strong>Rest'OU</strong></span> 
             </h3>
+            </div>
         </span>
         <div class="home-div">
             <img src="images/Paper map-amico (1).png" alt="Paper map illustration">
