--- a/views/restaurants/new.hbs
+++ b/views/restaurants/new.hbs
@@ -1,4 +1,4 @@
-    <form method="post" action="/restaurants/create" class="form form-container" enctype="multipart/form-data">
+    <form method="post" action="/restaurants/create" class="form form-container margin-top-big" enctype="multipart/form-data">
         <h1 class="title text-center">Create Restaurant</h1>
 
         {{> flashMessage}}
