--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -18,6 +18,9 @@
   padding: 20px;
   background-color: white;
   box-shadow: 0px 13px 10px -4px rgba(255,255,255,0.5);
+  position: fixed;
+  top: 0;
+  width: 100vw;
 }
 
 .navContainer .link {
