--- a/views/users/wish-list.hbs
+++ b/views/users/wish-list.hbs
@@ -1,7 +1,7 @@
 
 <div class="banner-wish-list" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.dribbble.com/users/4451315/screenshots/12271331/media/ad7f87f705c2915ed0e3c690d1d9d1d0.png?compress=1&resize=1600x1200);">
-  <div class="container">
-    <h1 class="text-center white">❤️ Your Wish-List 😋</h1>
+  <div class="container d-flex justify-content-center">
+    <h1 class="text-center white mt-5">❤️ Your Wish-List 😋</h1>
   </div>
 
     <div class="d-flex container-wish-list">
