--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,8 +33,8 @@
   {{! just a quick config with the CSS from artistify to have a quick visual feedback }}
   {{! Copied CSS in public/stylesheets/home.index }}
 
-  <div class="mt-5 d-flex">
-    <div class="cards">
+  <div class="mt-5 d-flex ">
+    <div class="cards margin-bottom-big">
     
         <h1 id="user_id" style="display: none;">{{user_id}}</h1>
         <h1 id="favoris" style="display: none;">{{favoris}}</h1>
