--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,13 +1,11 @@
 <section class="footer-down">
   <footer class="footerContainer">
-    <div class="logo">
-      <a href="/"> BON APPETIT ! </a>
-    </div>
+    <div></div>
     <nav>
-      <a href="#" class="link"><i class="fab fa-pinterest"></i> Pinterest</a>
-      |
-      <a class="link" href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-      |
+      <a href="#" class="link"><i class="fab fa-pinterest"></i> Pinterest </a>
+      
+      <a class="link" href="#"><i class="fab fa-instagram-square"></i> Instagram </a>
+      
       <a class="link" href="#"><i class="fab fa-facebook"></i> Facebook</a>
 
     </nav>
