--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,3 +118,11 @@ a {
   margin-bottom: 6rem !important;
 
 }
+
+.section-first-title {
+  padding: 17px;
+  background: #68B0AB;
+  border-radius: 11px;
+  color: white;
+}
+}
