--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -52,8 +52,13 @@
   }
   
   .footerContainer .link:hover {
-    background-color: #c8d5b9;
-    color: #faf3dd;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 7px 26px;
+    border: none;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background-color: #e4e4e7;
   }
   
   .link a {
