--- a/views/restaurants/restauPage.hbs
+++ b/views/restaurants/restauPage.hbs
@@ -22,7 +22,7 @@
       <p class="section-first-title">⭐️ {{restaurant.stars}} MICHELIN'S STARS</p> <br>
       <div class="box-shadow p-3">
       <p>🏚 {{restaurant.address}}</p> <br>  
-      <p>💵`Budget {{restaurant.minPrice}} - {{restaurant.maxPrice}} EUR`</p> <br>
+      <p>💵Budget {{restaurant.minPrice}} - {{restaurant.maxPrice}} EUR</p> <br>
       <p>👉 {{restaurant.standing}}</p> <br>
       <p>🍗 {{restaurant.cuisineType}}</p> <br>
       </div>
