form updated style

--- a/views/restaurants/new.hbs
+++ b/views/restaurants/new.hbs
@@ -4,63 +4,63 @@
         {{> flashMessage}}
 
         <div class="mb-3">
-            <label for="name" class="form-label">name</label>
+            {{!-- <label for="name" class="form-label"></label> --}}
             <input class="input form-control" type="text" id="name" name="name" placeholder="Name">
         </div>
 
         <div class="mb-3">
-            <label for="address" class="form-label">address</label>
-            <input class="input form-control" type="address" id="address" name="address" placeholder="adress">
+            {{!-- <label for="address" class="form-label"></label> --}}
+            <input class="input form-control" type="address" id="address" name="address" placeholder="Address">
         </div>
         <div class="mb-3">
-            <label for="minPrice" class="form-label">minPrice</label>
-            <input class="input form-control" type="text" id="minPrice" name="minPrice" placeholder="20">
+            {{!-- <label for="minPrice" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="minPrice" name="minPrice" placeholder="Least expensive item(ex:70)">
 
         </div>
         <div class="mb-3">
-            <label for="maxPrice" class="form-label">maxPrice</label>
-            <input class="input form-control" type="text" id="maxPrice" name="maxPrice" placeholder="100">
+            {{!-- <label for="maxPrice" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="maxPrice" name="maxPrice" placeholder="Most expensive dish or menu (ex:300)">
 
         </div>
         <div class="mb-3">
-            <label for="cuisineType" class="form-label">cuisineType</label>
-            <input class="input form-control" type="text" id="cuisineType" name="cuisineType">
+            {{!-- <label for="cuisineType" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="cuisineType" name="cuisineType" placeholder="Type of Cuisine">
 
         </div>
         <div class="mb-3">
-            <label for="description" class="form-label">description</label>
-            <input class="input form-control" type="text" id="description" name="description" placeholder="Amazing">
+            {{!-- <label for="description" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="description" name="description" placeholder="Description">
 
         </div>
         <div class="mb-3">
-            <label for="stars" class="form-label">stars</label>
-            <input class="input form-control" type="text" id="stars" name="stars">
+            {{!-- <label for="stars" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="stars" name="stars" placeholder="Number of Michelin star">
 
         </div>
         <div class="mb-3">
-            <label for="standing" class="form-label">standing</label>
-            <input class="input form-control" type="text" id="standing" name="standing">
-
-        </div>
-        <div class="mb-3">
-
-            <label for="greenTouch" class="form-label">greenTouch</label>
-            <input class="input form-control" type="text" id="greenTouch" name="greenTouch">
-        </div>
-        <div class="mb-3">
-            <label for="openingHours" class="form-label">openingHours</label>
-            <input class="input form-control" type="text" id="openingHours" name="openingHours">
+            {{!-- <label for="standing" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="standing" name="standing" placeholder="Standing">
 
         </div>
         <div class="mb-3">
 
-            <label for="phoneNumber" class="form-label">phoneNumber</label>
-            <input class="input form-control" type="text" id="phoneNumber" name="phoneNumber" placeholder="0665587888">
+            {{!-- <label for="greenTouch" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="greenTouch" name="greenTouch" placeholder="Ecofriendly practice (ex : Growing its own vegetables)">
+        </div>
+        <div class="mb-3">
+            {{!-- <label for="openingHours" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="openingHours" name="openingHours" placeholder="Opening Hours">
+
         </div>
         <div class="mb-3">
 
-            <label for="website" class="form-label">website</label>
-            <input class="input form-control" type="text" id="website" name="website" placeholder="www.resto.fr">
+            {{!-- <label for="phoneNumber" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="phoneNumber" name="phoneNumber" placeholder="Phone Number(ex :0665587888)" >
+        </div>
+        <div class="mb-3">
+
+            {{!-- <label for="website" class="form-label"></label> --}}
+            <input class="input form-control" type="text" id="website" name="website" placeholder="Website (ex : www.resto.fr)">
         </div>
 
         <div class="mb-3">
