--- a/views/restaurants/updateRestaurants.hbs
+++ b/views/restaurants/updateRestaurants.hbs
@@ -4,41 +4,41 @@
         {{> flashMessage}}
 
         <div class="mb-3">
-            <label for="name" class="form-label">name</label>
+            <label for="name" class="form-label">Name</label>
             <input class="input form-control" type="text" id="name" name="name" placeholder="Name" value="{{restaurant.name}}">
         </div>
 
         <div class="mb-3">
-            <label for="address" class="form-label">address</label>
+            <label for="address" class="form-label">Address</label>
             <input class="input form-control" type="address" id="address" name="address" placeholder="address" value="{{restaurant.address}}">
         </div>
         <div class="mb-3">
-            <label for="minPrice" class="form-label">minPrice</label>
+            <label for="minPrice" class="form-label">Least expensive item</label>
             <input class="input form-control" type="text" id="minPrice" name="minPrice" placeholder="20" value="{{restaurant.minPrice}}">
 
         </div>
         <div class="mb-3">
-            <label for="maxPrice" class="form-label">maxPrice</label>
+            <label for="maxPrice" class="form-label">Most expensive item or menu</label>
             <input class="input form-control" type="text" id="maxPrice" name="maxPrice" placeholder="100" value="{{restaurant.maxPrice}}">
 
         </div>
         <div class="mb-3">
-            <label for="cuisineType" class="form-label">cuisineType</label>
+            <label for="cuisineType" class="form-label">Type of Cuisine</label>
             <input class="input form-control" type="text" id="cuisineType" name="cuisineType">
 
         </div>
         <div class="mb-3">
-            <label for="description" class="form-label">description</label>
+            <label for="description" class="form-label">Type of Cuisine</label>
             <input class="input form-control" type="text" id="description" name="description" placeholder="Amazing" value="{{restaurant.description}}">
 
         </div>
         <div class="mb-3">
-            <label for="stars" class="form-label">stars</label>
+            <label for="stars" class="form-label">Stars</label>
             <input class="input form-control" type="text" id="stars" name="stars" value="{{restaurant.stars}}">
 
         </div>
         <div class="mb-3">
-            <label for="standing" class="form-label">standing</label>
+            <label for="standing" class="form-label">Standing</label>
             <input class="input form-control" type="text" id="standing" name="standing" value="{{restaurant.standing}}">
 
         </div>
