--- a/views/restaurants/updateRestaurants.hbs
+++ b/views/restaurants/updateRestaurants.hbs
@@ -63,12 +63,11 @@
             <input class="input form-control" type="text" id="website" name="website" placeholder="www.resto.fr" value="{{restaurant.website}}">
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 text-center">
 
-            <label for="picture" class="form-label">
-                choose a picture
+           
 
-            </label>
+           
             <input class="is-hidden" type="file" id="picture" name="picture">
         </div>
  <button class="btn-form">Update</button>
