--- a/views/restaurants/new.hbs
+++ b/views/restaurants/new.hbs
@@ -1,4 +1,4 @@
-    <form method="post" action="/restaurants/create" class="form form-container margin-top-big" enctype="multipart/form-data">
+    <form method="post" action="/restaurants/create" class="form form-container margin-top-big margin-bottom-big" enctype="multipart/form-data">
         <h1 class="title text-center">Create Restaurant</h1>
 
         {{> flashMessage}}
@@ -63,12 +63,9 @@
             <input class="input form-control" type="text" id="website" name="website" placeholder="Website (ex : www.resto.fr)">
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 text-center">
 
-            <label for="picture" class="form-label">
-                choose a picture
 
-            </label>
             <input class="is-hidden" type="file" id="picture" name="picture">
         </div>
 
