--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -22,7 +22,7 @@
 
       <a class="link" href="/users/wish-list">
         <i class="fas fa-heart fa-1x" {{!-- aria-hidden="true"--}}></i></a> 
-        <a class="link" href="/user/profil"><i class="fas fa-user fa-1x"></i> | 
+        <a class="link" href="/"><i class="fas fa-user fa-1x"></i> | 
         {{currentUser.firstName}} {{currentUser.lastName}}</a>
       <a class="link" href="/auth/signout"><i class="fas fa-sign-out-alt fa-1x"></i> | Signout</a>
     {{/if}}
