--- a/views/restaurants/restauPage.hbs
+++ b/views/restaurants/restauPage.hbs
@@ -49,7 +49,7 @@
         {{>reviewFormPartial}}
       </div>
       {{else}}
-      <p class="form-alt-option mt-3"><a href="/auth/signin">👉 Sign in </a>to add a review</p>
+      <p class="form-alt-option mt-3 mb-3"><a href="/auth/signin">👉 Sign in </a>to add a review</p>
       {{/if}}
          {{#if reviews}}
       <div class="box-shadow p-3">
